# MAI_IR_Project

./: README.md
core/: CMakeLists.txt
core/analysis/: zipf_analyzer.cpp  zipf_analyzer.h
core/cli/: build_index.cpp  main_cli.cpp  search_cli.cpp  search_cli.h  zipf_analysis.cpp
core/index/: boolean_index.cpp  boolean_index.h
core/search/: boolean_search.cpp  boolean_search.h
core/stemmer/: stemmer.cpp  stemmer.h
core/tokenizer/: tokenizer.cpp  tokenizer.h
core/utils/: file_utils.cpp  file_utils.h  map.h  set.h  sort.h  string_utils.cpp  string_utils.h  vector.h
corpus/: README.md  metadata.json
crawler/: config.json  download_corpus.py  requirements.txt  robot.py  utils.py
scripts/: build_all.sh  build_index.sh  download_corpus.sh  run_all.sh  run_tests.sh
web/: app.py
web/static/: style.css
web/templates/: index.html
